tests/compile-fail/fail9.stderr
error[E0308]: mismatched types
  --> $DIR/fail9.rs:15:21
   |
15 |     let _: &U<'a> = u;
   |                     ^ lifetime mismatch
   |
   = note: expected reference `&U<'a>`
              found reference `&U<'b>`
note: the lifetime `'a` as defined on the function body at 14:6...
  --> $DIR/fail9.rs:14:6
   |
14 | fn f<'a, 'b: 'a>(u: &U<'b>) {
   |      ^^
note: ...does not necessarily outlive the lifetime `'b` as defined on the function body at 14:10
  --> $DIR/fail9.rs:14:10
   |
14 | fn f<'a, 'b: 'a>(u: &U<'b>) {
   |          ^^
